# eta-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  ROADMAP.md  __init__.py  config.json  conftest.py  fix_dashboard.py  main.py  pyproject.toml  roadmap_dashboard.html  roadmap_state.json
backtest/: __init__.py  deflated_sharpe.py  engine.py  exit_quality.py  metrics.py  models.py  portfolio_correlation.py  replay.py  stop_hunt_sim.py  stress_scenarios.py  synthetic_bridge.py  tearsheet.py  walk_forward.py
bots/: __init__.py  base_bot.py  retrospective_adapter.py
brain/: __init__.py  bot_preflight_mixin.py  cli_provider.py  feature_flags.py  fm_trade_gates.py  htf_engine.py  indicator_suite.py  jarvis_admin.py  jarvis_anomaly.py  jarvis_context.py  jarvis_correlation.py  jarvis_cost_attribution.py  jarvis_daily_report.py  jarvis_explainer.py  jarvis_gate.py  jarvis_health.py  jarvis_journals.py  jarvis_pre_flight.py  jarvis_recommender.py  jarvis_session_state.py  llm_provider.py  model_policy.py  model_policy_budget.py  multi_agent.py  multi_model.py  multi_model_executor.py  multi_model_telemetry.py  online_learning.py  pnl_drift.py  portfolio_rebalancer_v2.py  pyramid_planner.py  rationale_miner.py  regime.py  regime_hmm.py  rl_agent.py  sweep_firm_gate.py  synthetic.py
chaos/: __init__.py  drills.py  scheduler.py
client/: index.html  main.js  package.json  preload.js  renderer.js  styles.css
configs/: alerts.yaml  bot_broker_routing.yaml  bybit.yaml  ibkr.yaml  kill_switch.yaml  tastytrade.yaml  tradovate.yaml
core/: __init__.py  apex_account_invariant.py  broker_equity_adapter.py  broker_equity_poller.py  broker_equity_reconciler.py  cftc_nfa_compliance.py  confluence_scorer.py  consistency_guard.py  control_plane.py  data_pipeline.py  events_calendar.py  execution_lanes.py  kill_switch_latch.py  kill_switch_runtime.py  l2_capture.py  live_shadow.py  market_impact.py  market_quality.py  master_tweaks.py  mcc_intent.py  order_flow.py  order_state_reconcile.py  parameter_sweep.py  portfolio_risk.py  principles_checklist.py  risk_engine.py  risk_profile.py  runtime_log_rotator.py  secrets.py  session_filter.py  session_gate.py  smart_router.py  sweep_engine.py  sweep_helpers.py  tail_hedge.py  trade_grader.py  trailing_dd_tracker.py  two_factor.py  volume_profile.py
data/: __init__.py  audit.py  bybit_ws.py  cleaning.py  databento_client.py  event_calendar.py  library.py  market_news.py  models.py  onchain_blockscout.py  parquet_loader.py  redis_cache.py  requirements.py  sentiment_lunarcrush.py  slippage_model.py  symbol_intel.py
deploy/: FirmCommandCenter_canonical.xml  FirmCore_canonical.xml  FmStatusServer.xml  HOST_RUNBOOK.md  MULTICHANNEL_SETUP.md  README.md  ThreeAIDaemon.xml  anomaly_pulse_run.bat  anomaly_pulse_task.xml  bridge_autoheal_run.bat  bridge_autoheal_task.xml  canonical_vps_fix.py  daily_debrief_run.bat  daily_debrief_task.xml  fm_status_http_server.py  fm_status_payload.py  fm_status_server.py  hermes_agent_task.xml  hermes_evening_journal_run.bat  hermes_evening_journal_task.xml  hermes_multichannel.example.yaml  hermes_proactive_run.bat  hermes_proactive_task.xml  hermes_run.bat  hermes_secrets.example.bat  hermes_tunnel.ps1  hermes_tunnel_task.xml  hermes_vps_config.yaml  hermes_vps_install.ps1  hermes_vps_postinstall.ps1  install_vps.sh  install_windows.ps1  jarvis_status_run.bat  jarvis_status_task.xml  kaizen_daily.bat  register_memory_backup_task.ps1  run_firmcore.bat  telegram_inbound_run.bat  telegram_inbound_task.xml  uninstall_windows.ps1  (+6 more)
desktop/: hermes_voice.py
docs/: ARCHITECTURE.md  BAR_DATA_HYGIENE.md  BLUSKY_ONBOARDING_RUNBOOK.md  BROKER_STABILITY_RUNBOOK.md  CODEX_OPERATOR_RUNBOOK.md  COMMODITY_5M_FETCH.md  CONTINUOUS_FRONT_MONTH_FETCH.md  DATA_PROVIDER_ACTIVATION_RUNBOOK.md  DIAMOND_PROTECTION_2026_05_12.md  FALSIFICATION_CRITERIA.md  FLEET_OPTIMIZATION_ROADMAP.md  FLEET_QTY_BUG_AUDIT.md  FORCE_MULTIPLIER.md  FUTURES_ONLY_FLEET_PIVOT_2026_05_12.md  HERMES_BRAIN_FUTURE_TRACKS.md  HERMES_BRAIN_OS_COMPLETE.md  HERMES_BRIDGE_LIVE_STATE_2026_05_12.md  IBKR_DATA_FEED_LAZY_IMPORT_NOTE.md  IBKR_PRO_DATA_INVENTORY.md  JARVIS_FULL_ACTIVATION.md  KILL_CRITERIA_MBT_MET.md  L2_LIVE_CUTOVER_RUNBOOK.md  L2_POST_MORTEM_TEMPLATE.md  L2_STRATEGY_DECISION_MEMO.md  L2_SUPERVISOR_WIRING.md  LAUNCH_CANDIDATE_SCAN_2026_05_13.md  LIVE_CUTOVER_OPERATOR_RUNBOOK.md  MASTER_SYNTHESIS_2026-05-05.md  MBT_BASIS_PROVIDER.md  MBT_MET_DATA_FETCH.md  MBT_MET_TWS_FETCH.md  MES_V2_SIZING_FORENSIC.md  MNQ_ENGINE_BRIDGE.md  MNQ_FUTURES_SAGE_VOL_REGIME_FORENSIC.md  MNQ_FUTURES_SAGE_VOL_REGIME_FORENSIC_CORRECTION_2026_05_13.md  MONDAY_MORNING_OPERATOR_RUNBOOK.md  OVERNIGHT_FINAL_SUMMARY.md  PAPER_SOAK_README.md  PHASE1_CAPTURE_SETUP.md  POSTLAUNCH_DAY1_TEMPLATE.md  (+76 more)
eval/: run_eval.py
features/: __init__.py  base.py  funding_skew.py  mcp_taps.py  onchain.py  pipeline.py  regime_hmm_feature.py  sentiment.py  trend_bias.py  vol_regime.py
feeds/: _audit_dormancy_consistency.py  _backup_state.py  _bump_roadmap_v0_1_25.py  _bump_roadmap_v0_1_28.py  _bump_roadmap_v0_1_58.py  _bump_roadmap_v0_1_59.py  _bump_roadmap_v0_1_60.py  _bump_roadmap_v0_1_63.py  _kill_switch_drift.py  _repo_health.py  _script_shim.py  _sharpe_drift.py  _trade_journal_reconcile.py  adversarial_reviewer.py  announce_data_library.py  asset_specific_config.py  auto_archive_cleanup.py  bandit_promotion_check.py  bar_accumulator.py  bar_builder_l1.py  bot_strategy_readiness.py  btc_broker_fleet.py  btc_live.py  btc_paper_lane.py  btc_paper_trade.py  capital_allocator.py  chaos_drill.py  cme_basis_provider.py  daily_premarket.py  data_health_check.py  data_quality_monitor.py  decision_journal_smoke.py  drift_check.py  drift_check_all.py  drift_watchdog_smoke.py  engage_firm_board.py  export_to_notion.py  extend_nq_daily_yahoo.py  fetch_btc_bars.py  fetch_etf_flows_farside.py  (+87 more)
funnel/: __init__.py  central_dashboard.py  cold_wallet_sweep.py  equity_monitor.py  fiat_to_crypto.py  integrations.py  orchestrator.py  transfer.py  waterfall.py
obs/: __init__.py  (+38 more)
(+1858 files in other folders)
