[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eta-engine"
version = "0.1.0"
description = "4-bot profit-recycling organism: MNQ/NQ → Crypto Seed → ETH/SOL/XRP Perps + Staking"
authors = [{name = "Edward Avila", email = "edward.t.avila@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "polars>=0.20",

    # Data feeds
    "ccxt>=4.0",
    "websockets>=12.0",

    # Storage
    "arcticdb>=4.0",
    "pyarrow>=14.0",

    # Broker adapters
    "httpx>=0.27",
    "aiohttp>=3.9",

    # ML / RL
    "torch>=2.2",
    "stable-baselines3>=2.2",
    "scikit-learn>=1.4",
    "lightgbm>=4.2",
    "river>=0.21",

    # Crypto / DeFi
    "web3>=6.15",
    "solana>=0.32",

    # Monitoring
    "prometheus-client>=0.20",
    "python-telegram-bot>=21.0",

    # Infra
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "redis>=5.0",
    "psycopg[binary]>=3.1",

    # Auth / file locking
    "bcrypt>=4.1",
    "portalocker>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ANN", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN401"]
# jarvis_dashboard embeds long HTML template strings (E501) and overrides
# BaseHTTPRequestHandler.log_message whose signature uses *args: Any (ANN401).
"scripts/jarvis_dashboard.py" = ["E501", "ANN401"]
# run_eta_live is a dispatch-heavy tie-together runtime: the router, bot
# factories, and OrderRequest surface cross module boundaries where a Protocol
# or Union would require pulling in 6+ venue/bot imports. The Any types are
# intentional extension points. *_ / **__ are placeholder param names for
# signatures that must match a venue-supplied contract whose extras we don't
# use.
"scripts/run_eta_live.py" = ["ANN002", "ANN003", "ANN401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: deselect with '-m \"not slow\"' -- run-time-heavy tests (cross-regime sim, multi-bar walk-forward, etc.)",
]

[tool.mypy]
python_version = "3.12"
strict = true
